# tt06-spo-be8-nomacro

./: .gitignore  CMakeLists.txt  build.py  config.json  info.yaml  module_areas.txt  odb_power.py  test.def
.github/workflows/: gds.yaml  test.yaml
.nova/Tasks/: Alchitry Cu.json
asm/: multiply.s  test0.s
cmake/: ice40.cmake
macros/: RAM8.gds  RAM8.lef  RAM8.max_.spef  RAM8.min_.spef  RAM8.nl.v  RAM8.nom_.spef
macros/I2C/: I2C.gds  I2C.lef  I2C.max.spef  I2C.min.spef  I2C.nl.v  I2C.nom.spef  I2C.pnl.v
macros/I2C/lib/max_ff_n40C_1v95/: I2C__max_ff_n40C_1v95.lib
macros/I2C/lib/max_ss_100C_1v60/: I2C__max_ss_100C_1v60.lib
macros/I2C/lib/max_tt_025C_1v80/: I2C__max_tt_025C_1v80.lib
macros/I2C/lib/min_ff_n40C_1v95/: I2C__min_ff_n40C_1v95.lib
macros/I2C/lib/min_ss_100C_1v60/: I2C__min_ss_100C_1v60.lib
macros/I2C/lib/min_tt_025C_1v80/: I2C__min_tt_025C_1v80.lib
macros/I2C/lib/nom_ff_n40C_1v95/: I2C__nom_ff_n40C_1v95.lib
macros/I2C/lib/nom_ss_100C_1v60/: I2C__nom_ss_100C_1v60.lib
macros/I2C/lib/nom_tt_025C_1v80/: I2C__nom_tt_025C_1v80.lib
macros/RAM16/: RAM16.gds  RAM16.lef  RAM16.max.spef  RAM16.min.spef  RAM16.nl.v  RAM16.nom.spef  RAM16.pnl.v
macros/RAM16/lib/max_ff_n40C_1v95/: RAM16__max_ff_n40C_1v95.lib
macros/RAM16/lib/max_ss_100C_1v60/: RAM16__max_ss_100C_1v60.lib
macros/RAM16/lib/max_tt_025C_1v80/: RAM16__max_tt_025C_1v80.lib
macros/RAM16/lib/min_ff_n40C_1v95/: RAM16__min_ff_n40C_1v95.lib
macros/RAM16/lib/min_ss_100C_1v60/: RAM16__min_ss_100C_1v60.lib
macros/RAM16/lib/min_tt_025C_1v80/: RAM16__min_tt_025C_1v80.lib
macros/RAM16/lib/nom_ff_n40C_1v95/: RAM16__nom_ff_n40C_1v95.lib
macros/RAM16/lib/nom_ss_100C_1v60/: RAM16__nom_ss_100C_1v60.lib
macros/RAM16/lib/nom_tt_025C_1v80/: RAM16__nom_tt_025C_1v80.lib
macros/RAM8/: RAM8.gds  RAM8.lef  RAM8.max.spef  RAM8.min.spef  RAM8.nl.v  RAM8.nom.spef  RAM8.pnl.v
macros/RAM8.lib/max_ff_n40C_1v95/: RAM8__max_ff_n40C_1v95.lib
macros/RAM8.lib/max_ss_100C_1v60/: RAM8__max_ss_100C_1v60.lib
macros/RAM8.lib/max_tt_025C_1v80/: RAM8__max_tt_025C_1v80.lib
macros/RAM8.lib/min_ff_n40C_1v95/: RAM8__min_ff_n40C_1v95.lib
macros/RAM8.lib/min_ss_100C_1v60/: RAM8__min_ss_100C_1v60.lib
macros/RAM8.lib/min_tt_025C_1v80/: RAM8__min_tt_025C_1v80.lib
macros/RAM8.lib/nom_ff_n40C_1v95/: RAM8__nom_ff_n40C_1v95.lib
macros/RAM8.lib/nom_ss_100C_1v60/: RAM8__nom_ss_100C_1v60.lib
macros/RAM8.lib/nom_tt_025C_1v80/: RAM8__nom_tt_025C_1v80.lib
macros/RAM8/RAM8.lib/max_ff_n40C_1v95/: RAM8__max_ff_n40C_1v95.lib
macros/RAM8/lib/min_ff_n40C_1v95/: RAM8__min_ff_n40C_1v95.lib
macros/RAM8/lib/min_ss_100C_1v60/: RAM8__min_ss_100C_1v60.lib
macros/RAM8/lib/min_tt_025C_1v80/: RAM8__min_tt_025C_1v80.lib
macros/RAM8/lib/nom_ff_n40C_1v95/: RAM8__nom_ff_n40C_1v95.lib
macros/RAM8/lib/nom_ss_100C_1v60/: RAM8__nom_ss_100C_1v60.lib
macros/RAM8/lib/nom_tt_025C_1v80/: RAM8__nom_tt_025C_1v80.lib
src/: I2C.v  RAM8.v  alu.v  bus_mux.v  config.tcl  control.v  core.v  cpu_access.v  datapath.v  debugger_apb.v  debugger_microcode.v  i2c_to_apb.v  microcode.v  project.v  ram.v  register.v  register4.v  seven_segment.v  status_reg.v  streams1_to_apb.v  streams4_to_apb.v  tt_top.v
src/cpu/: RAM16.v  RAM8.v  control.v  core.v  full_adder.v  microcode.v  pc.v  ram.v
src/debugger/: cpu_access.v  debugger_apb.v  status_reg.v
src/i2c/: I2C.v  i2c_slave.v
test/: CMakeLists.txt  Makefile  tb.gtkw  tb.v  test.py
test/cpu/: CMakeLists.txt  alu.py  bus_mux.py  control.py  core.py  datapath.py  full_adder.py  microcode.py  pc.py  ram.py  register.py
test/debugger/: CMakeLists.txt  debugger_apb.py  debugger_i2c.py  debugger_i2c.v
test/tt/: .gitignore  Makefile  tb.v  tt.py
tools/: as  completer.py  dbg  debugger_microcode.py  gen_microcode.py  i2c.py  isa.py  requirements.txt
